--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          scanner-version: latest  # Automatically updates SonarScanner
           args: >
             -Dsonar.projectKey=proj00_dfs
             -Dsonar.organization=proj00
@@ -67,6 +66,6 @@ jobs:
             -Dsonar.scm.provider=git
             -Dsonar.scm.forceReloadAll=true
             -Dsonar.sources=.
+            -Dsonar.analysis.scope=full
             -Dsonar.projectBaseDir=${{ github.workspace }}
             -Dsonar.working.directory=${{ github.workspace }}/.scannerwork
-            -Dsonar.verbose=true
