--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,3 +25,4 @@ sonar.sourceEncoding=UTF-8
 
 # Optional: For additional logging, enable verbose mode to help debug the analysis
 sonar.verbose=true
+sonar.language=ts,csharp
