--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -64,6 +64,7 @@ jobs:
             -Dsonar.organization=proj00
             -Dsonar.scm.disabled=false
             -Dsonar.scm.provider=git
+            -Dsonar.language=ts,csharp
             -Dsonar.scm.forceReloadAll=true
             -Dsonar.sources=.
             -Dsonar.analysis.scope=full
