--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
-
 dfs/node/db
-
+.scannerwork
+.sonarqube
+*.local
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
