--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,15 +38,19 @@ jobs:
         run: dotnet restore dfs/dfs.slnf
 
       - name: Init SonarScanner
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet tool install --global dotnet-sonarscanner
-          dotnet-sonarscanner begin /key:proj00_dfs /o:proj00 /d:sonar.token=${{ secrets.SONAR_TOKEN }}
+          dotnet-sonarscanner begin /key:proj00_dfs /o:proj00 /d:sonar.token=$SONAR_TOKEN
 
       - name: Build .NET project
         run: dotnet build --no-restore dfs/dfs.slnf
 
       - name: Finish SonarScanner
-        run: dotnet-sonarscanner end /d:sonar.token=${{ secrets.SONAR_TOKEN }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: dotnet-sonarscanner end /d:sonar.token=$SONAR_TOKEN
 
   sonarscannercheck:
     runs-on: windows-latest
