--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,15 +37,28 @@ jobs:
       - name: Restore .NET dependencies
         run: dotnet restore dfs/dfs.slnf
 
+      - name: Build .NET project
+        run: dotnet build --no-restore dfs/dfs.slnf
+
+  sonar:
+    runs-on: windows-latest
+    permissions: read-all
+    needs: [test, ui-tests]
+    steps:
       - name: Init SonarScanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet tool install --global dotnet-sonarscanner
-          dotnet-sonarscanner begin /key:proj00_dfs /o:proj00 /d:sonar.token=${{ secrets.SONAR_TOKEN }}
+          dotnet-sonarscanner begin `
+          /key:proj00_dfs /o:proj00 `
+          /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
+          /d:sonar.cs.opencover.reportsPaths=./dfs/integration-tests/coverage.opencover.xml `
+          /d:sonar.javascript.lcov.reportPaths=./dfs/electron/coverage/lcov-report/lcov-report.json
 
-      - name: Build .NET project
-        run: dotnet build --no-restore dfs/dfs.slnf
+      - name: Gather info
+        run: |
+          dotnet build --no-restore dfs/dfs.slnf
 
       - name: Finish SonarScanner
         env:
@@ -55,7 +68,7 @@ jobs:
   sonarscannercheck:
     runs-on: windows-latest
     permissions: read-all
-    needs: build
+    needs: [sonar]
     steps:
       - uses: actions/checkout@v4
       - name: Fetch issues
@@ -72,7 +85,7 @@ jobs:
   quality-gate-check:
     runs-on: windows-latest
     permissions: read-all
-    needs: [build]
+    needs: [sonar]
     steps:
       - name: Check Quality Gate
         run: |
