--- a/dfs/node-unit-tests/unit-tests.csproj
+++ b/dfs/node-unit-tests/unit-tests.csproj
@@ -15,6 +15,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0-preview-25107-01" />
     <PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.7.0">
@@ -25,7 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\common-test\common-test.csproj" />
     <ProjectReference Include="..\common\common.csproj" />
+    <ProjectReference Include="..\node\node.csproj" />
+    <ProjectReference Include="..\tracker\tracker.csproj" />
   </ItemGroup>
 
   <ItemGroup>
