--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: dfs/**/bin
+          path: dfs/
   sonar:
     runs-on: windows-latest
     permissions: read-all
@@ -160,12 +160,12 @@ jobs:
 
       - name: Run .NET tests and collect code coverage
         run: |
-          dotnet test --no-build --verbosity normal $(Get-ChildItem -Recurse -Filter "*unit-tests.dll" | Select-Object -ExpandProperty FullName) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="unitcoverage.xml"
+          dotnet test --verbosity normal ./build-output/node-unit-tests/unit-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="unitcoverage.xml"
 
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
         with:
-          path: ./dfs/node-unit-tests/unitcoverage.xml
+          path: ./build-output/node-unit-tests/unitcoverage.xml
           name: dotnet-unit-coverage
           
   cs-integration:
@@ -191,12 +191,12 @@ jobs:
 
       - name: Run .NET tests and collect code coverage
         run: |
-          dotnet test --no-build /p:ParallelizeTestCollections=false --verbosity normal $(Get-ChildItem -Recurse -Filter "*integration-tests.dll" | Select-Object -ExpandProperty FullName) /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="integrationcoverage.xml"
+          dotnet test /p:ParallelizeTestCollections=false --verbosity normal ./build-output/integration-tests/integration-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="integrationcoverage.xml"
 
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
         with:
-          path: ./dfs/integration-tests/integrationcoverage.xml
+          path: ./build-output/integration-tests/integrationcoverage.xml
           name: dotnet-integration-coverage
           
   # UI Test Job (Jest)
