--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -88,8 +88,8 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
       run: |
-        dotnet restore dfs/dfs.slnf
-        dotnet build --no-restore dfs/dfs.slnf
+        dotnet restore dfs/dfs.sln
+        dotnet build --no-restore dfs/dfs.sln
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
