--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -166,8 +166,9 @@ jobs:
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
         with:
-          path: dfs/a/unitcoverage.xml
           name: dotnet-unit-coverage
+          path: '**/unitcoverage.xml'
+          if-no-files-found: error
           
   cs-integration:
     runs-on: windows-latest
@@ -198,7 +199,8 @@ jobs:
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
         with:
-          path: dfs/a/integrationcoverage.xml
+          path: '**/integrationcoverage.xml'
+          if-no-files-found: error
           name: dotnet-integration-coverage
           
   # UI Test Job (Jest)
