--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -160,11 +160,9 @@ jobs:
 
       - name: Run .NET tests and collect code coverage
         run: |
-          $CoverageOutput = "$(pwd)/a/unitcoverage.xml"
-          dotnet test --no-build --verbosity d ./build-output/node-unit-tests/unit-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$CoverageOutput
-      - name: List all files for debugging
-        run: dir /s /b
-
+          dotnet test --no-build --verbosity d ./build-output/node-unit-tests/unit-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="unitcoverage.xml"
+      - name: aaa
+        run: Get-ChildItem -Recurse
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
         with:
@@ -195,8 +193,7 @@ jobs:
 
       - name: Run .NET tests and collect code coverage
         run: |
-          $CoverageOutput = "$(pwd)/a/integrationcoverage.xml"
-          dotnet test --no-build /p:ParallelizeTestCollections=false --verbosity d ./build-output/integration-tests/integration-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$CoverageOutput
+          dotnet test --no-build /p:ParallelizeTestCollections=false --verbosity d ./build-output/integration-tests/integration-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="integrationcoverage.xml"
 
       - name: Upload .NET Coverage Report
         uses: actions/upload-artifact@v4
