--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           path: ~/.dotnet
           key: ${{ runner.os }}-dotnet-sdk-${{ matrix.dotnet-version }}
-          
+
       - name: Restore .NET dependencies
         run: dotnet restore dfs/dfs.sln
-        
+
       - name: Init SonarScanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -44,16 +44,19 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
           dotnet-sonarscanner begin `
           /key:proj00_dfs /o:proj00 `
-          /d:sonar.token=${{ secrets.SONAR_TOKEN }} 
+          /d:sonar.token=${{ secrets.SONAR_TOKEN }}
 
       - name: Build .NET project
         run: dotnet build --no-restore dfs/dfs.sln
-        
+
+      - name: Test .NET project
+        run: dotnet test --no-build dfs/dfs.sln --verbosity d --collect "Code Coverage"
+
       - name: Finish SonarScanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: dotnet-sonarscanner end /d:sonar.token=${{ secrets.SONAR_TOKEN }}
-        
+
       - name: Upload Build Output
         uses: actions/upload-artifact@v4
         with:
@@ -77,7 +80,7 @@ jobs:
         with:
           name: dotnet-integration-coverage
           path: ./coverage/dotnet
-          
+
       - name: Download Jest coverage report
         uses: actions/download-artifact@v4
         with:
@@ -136,72 +139,7 @@ jobs:
           } else {
               Write-Host "Quality Gate passed!"
           }
-          
-  cs-unit:
-    runs-on: windows-latest
-    permissions: read-all
-    needs: cs-build
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Download Build Output
-        uses: actions/download-artifact@v4
-        with:
-          name: build-output
-          path: ./build-output
-          
-      - name: Cache NuGet packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
-
-      - name: Run .NET tests and collect code coverage
-        run: |
-          dotnet test --no-build --verbosity d ./build-output/node-unit-tests/unit-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="unitcoverage.xml"
-      - name: aaa
-        run: Get-ChildItem -Recurse
-      - name: Upload .NET Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: dotnet-unit-coverage
-          path: '**/unitcoverage.xml'
-          if-no-files-found: error
-          
-  cs-integration:
-    runs-on: windows-latest
-    permissions: read-all
-    needs: cs-build
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download Build Output
-        uses: actions/download-artifact@v4
-        with:
-          name: build-output
-          path: ./build-output
-          
-      - name: Cache NuGet packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
-
-      - name: Run .NET tests and collect code coverage
-        run: |
-          dotnet test --no-build /p:ParallelizeTestCollections=false --verbosity d ./build-output/integration-tests/integration-tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="integrationcoverage.xml"
-
-      - name: Upload .NET Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          path: '**/integrationcoverage.xml'
-          if-no-files-found: error
-          name: dotnet-integration-coverage
-          
   # UI Test Job (Jest)
   ui:
     runs-on: windows-latest
@@ -233,9 +171,3 @@ jobs:
       - name: Run Jest tests with coverage
         working-directory: ./dfs/electron
         run: npx jest --coverage
-
-      - name: Upload Jest Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          path: ./dfs/electron/coverage/lcov.info
-          name: jest-coverage
