--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -9,6 +9,7 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <PlatformTarget>x64</PlatformTarget>
+	  <ParallelizeTestCollections>false</ParallelizeTestCollections>
   </PropertyGroup>
 
 	<Target Name="PreBuildKillExecutables" BeforeTargets="Build">
