--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -60,6 +60,7 @@
     "postcss-preset-env": "^10.1.5",
     "protobufjs": "^7.5.0",
     "protobufjs-cli": "^1.1.3",
+    "sonar-scanner": "^3.1.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
