--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\common-test\common-test.csproj" />
+    <ProjectReference Include="..\common-tests\common-tests.csproj" />
     <ProjectReference Include="..\node\node.csproj" />
     <ProjectReference Include="..\tracker\tracker.csproj" />
   </ItemGroup>
