--- a/dfs/common-tests/common-tests.csproj
+++ b/dfs/common-tests/common-tests.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>common_test</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <SonarQubeTestProject>true</SonarQubeTestProject>
   </PropertyGroup>
 
   <ItemGroup>
