fix fs modification api

--- a/dfs/.editorconfig
+++ b/dfs/.editorconfig
@@ -68,7 +68,7 @@ dotnet_style_prefer_conditional_expression_over_return = true:silent
 dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_diagnostic.VSTHRD113.severity = error
-dotnet_diagnostic.CA2007.severity = suggestion
+dotnet_diagnostic.CA2007.severity = none
 dotnet_diagnostic.CA1720.severity = suggestion
 dotnet_diagnostic.CA1034.severity = suggestion
 dotnet_diagnostic.CA1054.severity = suggestion
