--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -38,6 +38,9 @@
     "@electron/fuses": "^1.8.0",
     "@protobuf-ts/plugin": "^2.9.6",
     "@protobuf-ts/protoc": "^2.9.6",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
@@ -54,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "jest": "^29.7.0",
+    "jsdom": "^23.0.1",
     "node-loader": "^2.1.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
@@ -83,12 +87,15 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-log": "^5.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "get-port": "^7.1.0",
+    "ip-address": "^9.0.5",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.488.0",
     "radix-ui": "^1.2.0",
