--- a/dfs/.editorconfig
+++ b/dfs/.editorconfig
@@ -73,6 +73,7 @@ dotnet_diagnostic.CA1720.severity = suggestion
 dotnet_diagnostic.CA1034.severity = suggestion
 dotnet_diagnostic.CA1054.severity = suggestion
 dotnet_diagnostic.CA1055.severity = suggestion
+dotnet_diagnostic.CA1416.severity = none
 
 [*.cs]
 csharp_indent_labels = one_less_than_current
