--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -38,10 +38,26 @@
     "@electron/fuses": "^1.8.0",
     "@protobuf-ts/plugin": "^2.9.6",
     "@protobuf-ts/protoc": "^2.9.6",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/body-parser": "^1.19.5",
+    "@types/bonjour": "^3.5.13",
+    "@types/connect": "^3.4.38",
+    "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/estree": "^1.0.7",
     "@types/jest": "^29.5.14",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/responselike": "^1.0.3",
+    "@types/serve-static": "^1.15.7",
+    "@types/stack-utils": "^2.0.3",
+    "@types/yauzl": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -83,15 +99,13 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-log": "^5.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "get-port": "^7.1.0",
-    "ip-address": "^9.0.5",
+    "ip-address": "^10.0.1",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.488.0",
     "radix-ui": "^1.2.0",
