--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,13 +51,14 @@ jobs:
           dotnet-sonarscanner begin `
           /key:proj00_dfs /o:proj00 `
           /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
-          /d:typescript.lcov.reportPaths=coverage/jest/lcov.info
+          /d:typescript.lcov.reportPaths=coverage/jest/lcov.info `
+          /d:sonar.cs.opencover.reportPaths="dfs/integration-tests/coverage.opencover.xml,dfs/unit-tests/coverage.opencover.xml"
 
       - name: Build .NET project
         run: dotnet build --no-restore dfs/dfs.sln
 
       - name: Test .NET project
-        run: dotnet test --no-build dfs/dfs.sln --verbosity d --collect "Code Coverage" /p:ParallelizeTestCollections=false
+        run: dotnet test --no-build dfs/dfs.sln --verbosity d /p:ParallelizeTestCollections=false /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage.opencover.xml
 
       - name: Finish SonarScanner
         env:
