--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,7 +52,8 @@ jobs:
           /key:proj00_dfs /o:proj00 `
           /d:sonar.token=${{ secrets.SONAR_TOKEN }} `
           /d:typescript.lcov.reportPaths=coverage/jest/lcov.info `
-          /d:sonar.cs.opencover.reportsPaths="dfs/integration-tests/coverage.opencover.xml,dfs/unit-tests/coverage.opencover.xml"
+          /d:sonar.cs.opencover.reportsPaths="dfs/integration-tests/coverage.opencover.xml,dfs/unit-tests/coverage.opencover.xml" `
+          /d:sonar.verbose=true
 
       - name: Build .NET project
         run: dotnet build --no-restore dfs/dfs.sln
